--- a/app/src/main/res/layout/fragment_control_book.xml
+++ b/app/src/main/res/layout/fragment_control_book.xml
@@ -69,86 +69,11 @@
         app:layout_constraintTop_toBottomOf="@id/section_bookcontrol_profile"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_book_control"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginHorizontal="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_controlbook_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="1 Januari 2022"
-                        android:layout_margin="16dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/green_700"/>
-
-                    <View
-                        android:id="@+id/line"
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginBottom="16dp"
-                        android:background="@color/silver"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Nama Dokter"
-                        android:layout_marginHorizontal="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_controlbook_doctor_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Dr. Richard Lee"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Status Kesehatan"
-                        android:layout_marginHorizontal="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_controlbook_medical_status"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Baik"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Catatan"
-                        android:layout_marginHorizontal="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_controlbook_note"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:textStyle="bold"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
+            tools:listitem="@layout/item_row_book" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
